validaciones 3_8  resuelto errores con casting